# pauth

./: .flake8  .pre-commit-config.yaml  404.html  CONTRIBUTING.md  README.md  index.html  licenses.md  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  setup.py  sitemap.xml
.github/: dependabot.yml  labeler.yml  markdown-link-check-config.json  pull_request_template.md  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  coverage.yml  dependabot-auto.yml  documentation.yml  labeler.yml  publish.yml  release-drafter.yml  security.yml  stale.yml
advanced/error-handling/: index.html
advanced/pkce/: index.html
advanced/security/: index.html
advanced/token-storage/: index.html
docs/: index.md
docs/advanced/: error-handling.md  pkce.md  security.md  token-storage.md
docs/getting-started/: configuration.md  installation.md  quick-start.md
docs/integrations/: django.md  flask.md
docs/providers/: discord.md  facebook.md  github.md  google.md  linkedin.md  microsoft.md  overview.md  twitter.md
getting-started/configuration/: index.html
getting-started/installation/: index.html
getting-started/quick-start/: index.html
integrations/django/: index.html
integrations/flask/: index.html
providers/discord/: index.html
providers/facebook/: index.html
providers/github/: index.html
providers/google/: index.html
providers/linkedin/: index.html
providers/microsoft/: index.html
providers/overview/: index.html
providers/twitter/: index.html
search/: search_index.json
src/client/: __init__.py  client.py
src/exceptions/: __init__.py
src/http/: __init__.py  adapters.py  protocol.py
src/models/: __init__.py  provider.py  session.py  token.py  user.py
src/pauth/: __init__.py
src/playground/: playground.py
src/providers/: __init__.py  base.py  discord.py  facebook.py  github.py  google.py  linkedin.py  microsoft.py  twitter.py
src/storage/: __init__.py  base.py  mem.py
src/tests/: test_memory_token_storage.py  test_oauth_client.py  test_pkce.py
src/utils/: __init__.py  error.py  pkce.py  request.py
