[tool.poetry]
name = "pauth"
version = "0.2.0"
description = "A Python library for handling OAuth 2.0 authentication with multiple providers"
authors = ["Utkarsh Priyadarshi <utkarshpriyadarshi5026@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/utkarsh5026/pauth"
repository = "https://github.com/utkarsh5026/pauth"
keywords = ["oauth", "oauth2", "authentication", "google", "github", "facebook", "twitter"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Security",
]
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
aiohttp = "^3.9.0"
certifi = "^2024.7.4"
charset-normalizer = "^3.3.2"
idna = "^3.7"
urllib3 = "^2.2.2"
Pygments = "^2.18.0"
markdown-it-py = "^3.0.0"
mdurl = "^0.1.2"
rich = "^13.7.1"
qrcode = "^7.4.2"

# Optional dependencies
Flask = {version = "^3.0.0", optional = true}
Django = {version = "^5.0.0", optional = true}
httpx = "^0.28.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-cov = "^4.1.0"
pytest-asyncio = "^0.23.0"
black = "^24.0.0"
flake8 = "^7.0.0"
mypy = "^1.8.0"
isort = "^5.13.0"
twine = "^5.1.1"
setuptools = "^71.0.3"
wheel = "^0.41.0"
pip-licenses = "^5.5.0"

[tool.poetry.extras]
flask = ["Flask"]
django = ["Django"]
all = ["Flask", "Django"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[tool.pytest.ini_options]
testpaths = ["src/tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=src --cov-report=term-missing --cov-report=html"
markers = ["asyncio: mark test as an asyncio test"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
